功能增加：1，增加切图标识；2，增加变星匹配，自动后随过滤。